# hh-permissions-tool

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  setup.ps1  setup.sh
hh_permissions_tool/: __init__.py  cli.py
